# amers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindP4EST.cmake  FindSC.cmake
scripts/: p4est-setup.sh
src/: CMakeLists.txt  advaction.c  amr.c  amr.h  balance_seeds.c  connectivity.c  connectivity.h  hw32.h  main.c  util.c
src/ns_solver/: CMakeLists.txt  data.h  flow.c  flux.c  ns.c  ns.h  solver.c  solver.h  timestep.c  util.c  util.h
src/ns_solver/data/: simple.data
src/test_prj/: CMakeLists.txt
src/upwind/: CMakeLists.txt  data.h  flux.c  solver.c  solver.h  timestep.c  upwind.c  upwind.h  util.c  util.h
